# tide-fluent-routes

./: Cargo.toml  README.md  README.tpl
.github/workflows/: ci.yml
examples/: route.rs
src/: fs.rs  lib.rs  path.rs  reverse_router.rs  routebuilder.rs  router.rs  routesegment.rs  util.rs
