[package]
name = "tide-fluent-routes"
version = "0.1.3"
edition = "2018"

authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Tide fluent routes is a library that implements a fluent routing API for Tide"
repository = "https://github.com/mendelt/tide-fluent-routes"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["tide", "http", "web", "routing"]
readme = "README.md"

[dependencies]
tide = "0.14.0"
log = "0.4.11"
async-std = ""
